# step-tracer

./: LICENSE  Makefile  README.md  pyproject.toml
docker/sandbox/: Dockerfile  sandbox_executor.py
src/step_tracer/: __init__.py  models.py  sandbox.py  step_tracer_utils.py  tracer.py  tracer_transformer.py
tests/: conftest.py  test_branch_tracking.py  test_function_tracking.py  test_loop_tracking.py  test_sandbox.py  test_variable_tracking.py
