[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "step-tracer"
version = "0.1.0"
description = "A Python code execution tracer using AST transformation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "EdCraft Team" }]
keywords = ["code-tracing", "execution-analysis", "ast"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "S", "T20", "Q"]
ignore = ["E501", "S102"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # Allow asserts in tests
]
